kubernetes/.archive/kanidm/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  kanidm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kanidm
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      containers:
      - name:  kanidm
        image:  kanidm
        # imagePullPolicy: Always
        # securityContext:
        #   runAsUser: 1000
        #   runAsGroup: 1000
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  80
          name:  kanidm
        volumeMounts:
        - name: config
          mountPath: /data/server.toml
          subPath: server.toml
          readOnly: true
        - name: certs
          mountPath: /certs
          readOnly: true
        - name: db
          mountPath: /db
        - name: backups
          mountPath: /backups
      volumes:
        - name: config
          configMap:
            name:  kanidm-config
        - name: certs
          secret:
            secretName:  kanidm-tls
        - name: db
          persistentVolumeClaim:
            claimName:  kanidm-db
        - name: backups
          persistentVolumeClaim:
            claimName:  kanidm-backups
      restartPolicy: Always
