kubernetes/.archive/kanidm/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanidm
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:

  rules:
  - host: auth.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanidm
            port:
              number: 8443
